--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 #content{
     display: grid;
     position: relative;
-    overflow-x: hidden;
+    overflow: auto;
     grid-template-rows: 0.3fr 1fr;
     grid-template-columns: 1fr 1fr;
     width: 100%;
